# hs2sffree

./: .gitignore  .tool-versions  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: branch.yml
src/: field_mapping.py  settings.py  translator.py
src/infra/: address_parser.py  companies_db.py  dict.py  hubspot.py
src/models/: field_map.py
tests/: conftest.py  test_translator_build_sf_csvs.py  test_translator_cleanup.py  test_translator_download_hs_objects.py
tests/fixtures/: accounts_contacts.csv  companies_p1.json  companies_p1_duplicate_names_same_batch.json  companies_p2.json  contacts_p1.json  contacts_p2.json  deals_p1.json  deals_p2.json  opportunities.csv
tests/fixtures/duplicate_name/: accounts_contacts.csv  companies_p2_duplicate_name.json  errors_accounts_contacts.csv  errors_opportunities.csv  opportunities.csv
tests/fixtures/missing_req_fields/: accounts_contacts.csv  companies_p1_missing_req_fields.json  contacts_p2_missing_req_fields.json  deals_p2_missing_req_fields.json  errors_accounts_contacts.csv  errors_opportunities.csv  opportunities.csv
tests/infra/: test_address_parser.py  test_companies_db.py  test_hubspot.py
