[project]
name = "hs2sffree"
version = "0.0.1"
description = "Data migration tool from HubSpot to Salesforce Free CRM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ivan Rublev", email = "git@ivanrublev.me"}
]

dependencies = [
    "dotenv>=0.9.9",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rich-click>=1.9.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "nuitka>=2.8.9",
    "pyrefly>=0.36.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.4.3",
    "responses>=0.25.8",
    "ruff>=0.14.0",
]

[tool.nuitka]
# Exclude dev dependencies from production builds
noinclude-pytest-mode = "nofollow"
noinclude-custom-mode = ["freezegun:nofollow", "nuitka:nofollow", "pyrefly:nofollow", "pytest:nofollow", "pytest-mock:nofollow", "pytest-watcher:nofollow", "responses:nofollow", "ruff:nofollow"]

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
search-path = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
#select = ["E4", "E7", "E9", "F"]
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
